// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-user-group-by-id-array should get multiple user groups by ID 1`] = `
[
  {
    "alias": "testUserGroup1",
    "icon": null,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test User Group 1",
  },
  {
    "alias": "testUserGroup2",
    "icon": null,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test User Group 2",
  },
]
`;

exports[`get-user-group-by-id-array should get no user groups for empty request 1`] = `
{
  "items": [
    {
      "alias": "admin",
      "aliasCanBeChanged": false,
      "documentRootAccess": true,
      "documentStartNode": null,
      "fallbackPermissions": [
        "Umb.Document.Create",
        "Umb.Document.Update",
        "Umb.Document.Delete",
        "Umb.Document.Move",
        "Umb.Document.Duplicate",
        "Umb.Document.Sort",
        "Umb.Document.Rollback",
        "Umb.Document.PublicAccess",
        "Umb.Document.CultureAndHostnames",
        "Umb.Document.Publish",
        "Umb.Document.Permissions",
        "Umb.Document.Unpublish",
        "Umb.Document.Read",
        "Umb.Document.CreateBlueprint",
        "Umb.Document.Notifications",
        ":",
        "5",
        "7",
        "T",
      ],
      "hasAccessToAllLanguages": true,
      "icon": "icon-medal",
      "id": "e5e7f6c8-7f9c-4b5b-8d5d-9e1e5a4f7e4d",
      "isDeletable": false,
      "languages": [],
      "mediaRootAccess": true,
      "mediaStartNode": null,
      "name": "Administrators",
      "permissions": [],
      "sections": [
        "Umb.Section.Content",
        "Umb.Section.Forms",
        "Umb.Section.Media",
        "Umb.Section.Members",
        "Umb.Section.Packages",
        "Umb.Section.Settings",
        "Umb.Section.Translation",
        "Umb.Section.Users",
      ],
    },
    {
      "alias": "editor",
      "aliasCanBeChanged": true,
      "documentRootAccess": true,
      "documentStartNode": null,
      "fallbackPermissions": [
        "Umb.Document.Create",
        "Umb.Document.Update",
        "Umb.Document.Delete",
        "Umb.Document.Move",
        "Umb.Document.Duplicate",
        "Umb.Document.Sort",
        "Umb.Document.Rollback",
        "Umb.Document.PublicAccess",
        "Umb.Document.Publish",
        "Umb.Document.Unpublish",
        "Umb.Document.Read",
        "Umb.Document.CreateBlueprint",
        "Umb.Document.Notifications",
        ":",
        "5",
        "T",
      ],
      "hasAccessToAllLanguages": true,
      "icon": "icon-tools",
      "id": "44dc260e-b4d4-4dd9-9081-eec5598f1641",
      "isDeletable": true,
      "languages": [],
      "mediaRootAccess": true,
      "mediaStartNode": null,
      "name": "Editors",
      "permissions": [],
      "sections": [
        "Umb.Section.Content",
        "Umb.Section.Forms",
        "Umb.Section.Media",
      ],
    },
    {
      "alias": "sensitiveData",
      "aliasCanBeChanged": false,
      "documentRootAccess": false,
      "documentStartNode": null,
      "fallbackPermissions": [],
      "hasAccessToAllLanguages": false,
      "icon": "icon-lock",
      "id": "8c6ad70f-d307-4e4a-af58-72c2e4e9439d",
      "isDeletable": false,
      "languages": [],
      "mediaRootAccess": false,
      "mediaStartNode": null,
      "name": "Sensitive data",
      "permissions": [],
      "sections": [],
    },
    {
      "alias": "translator",
      "aliasCanBeChanged": false,
      "documentRootAccess": true,
      "documentStartNode": null,
      "fallbackPermissions": [
        "Umb.Document.Update",
        "Umb.Document.Read",
      ],
      "hasAccessToAllLanguages": true,
      "icon": "icon-globe",
      "id": "f2012e4c-d232-4bd1-8eae-4384032d97d8",
      "isDeletable": false,
      "languages": [],
      "mediaRootAccess": true,
      "mediaStartNode": null,
      "name": "Translators",
      "permissions": [],
      "sections": [
        "Umb.Section.Translation",
      ],
    },
    {
      "alias": "writer",
      "aliasCanBeChanged": true,
      "documentRootAccess": true,
      "documentStartNode": null,
      "fallbackPermissions": [
        "Umb.Document.Create",
        "Umb.Document.Update",
        "Umb.Document.Read",
        "Umb.Document.Notifications",
        ":",
      ],
      "hasAccessToAllLanguages": true,
      "icon": "icon-edit",
      "id": "9fc2a16f-528c-46d6-a014-75bf4ec2480c",
      "isDeletable": true,
      "languages": [],
      "mediaRootAccess": true,
      "mediaStartNode": null,
      "name": "Writers",
      "permissions": [],
      "sections": [
        "Umb.Section.Content",
      ],
    },
  ],
  "total": 5,
}
`;

exports[`get-user-group-by-id-array should get single user group by ID 1`] = `
[
  {
    "alias": "testUserGroup1",
    "icon": null,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test User Group 1",
  },
]
`;
